# shadyradio

./: .env.example  .env.local.example  .env.production.example  .gitignore  CLAUDE.md  grid-visual.html  index.html  package-lock.json  package.json  pages.toml  test.html  verify_audio.cjs  verify_long.cjs  vite.config.js
dsp/: CMakeCache.txt  CMakeLists.txt  Makefile  automix.cpp  beat_tracker.cpp  cmake_install.cmake  dynamics.cpp  engine.cpp  engine.h  engine.js  engine.wasm  filters.cpp  mixer.cpp
public/: manifest.json  sw.js
public/audio/: engine.worklet.js
public/dsp/: engine.js  engine.wasm
src/: App.css  App.jsx  index.css  main.jsx
src/audio/: audioManager.js  crossfader.worklet.js  engine.worklet.js
src/components/: AdminDashboard.jsx  ChatPanel.css  ChatPanel.jsx  DiagPanel.jsx  GenreGrid.css  GenreGrid.jsx  GridTool.jsx  Library.css  Library.jsx  NowPlaying.css  NowPlaying.jsx  ProPanel.css  ProPanel.jsx  SFCamera.jsx  SFHeroSphere.jsx  SFParticleField.jsx  SFSpectrum.css  SFSpectrum.jsx  Settings.css  Settings.jsx  ShadyProps.jsx  ShadyStage.css  ShadyStage.jsx  SoundSystem.css  SoundSystem.jsx  SpeakerCell.jsx
src/hooks/: useAudio.js
src/utils/: audioManager.js
tools/: README.md  analyze.py  requirements.txt
worker/: wrangler.toml
worker/src/: index.js
